--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "grunt-sync": "0.5.2",
     "include-all": "^1.0.0",
     "rc": "1.0.1",
+    "react": "^15.5.3",
+    "react-dom": "^15.5.3",
     "sails": "~0.12.13",
     "sails-disk": "~0.10.9",
     "sails-mysql": "^0.11.5"
