--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "ejs": "2.3.4",
     "grunt": "1.0.1",
     "grunt-contrib-clean": "1.0.0",
@@ -19,8 +20,10 @@
     "grunt-sails-linker": "~0.10.1",
     "grunt-sync": "0.5.2",
     "include-all": "^1.0.0",
+    "libsodium": "^0.5.1",
     "rc": "1.0.1",
     "react": "^15.5.3",
+    "react-bootstrap": "^0.30.8",
     "react-dom": "^15.5.3",
     "sails": "~0.12.13",
     "sails-disk": "~0.10.9",
