--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-dom": "^15.5.3",
     "sails": "~0.12.13",
     "sails-disk": "~0.10.9",
-    "sails-mysql": "^0.11.5"
+    "sails-mysql": "^0.11.5",
+    "socket.io": "^1.7.4"
   },
   "scripts": {
     "debug": "node debug app.js",
