--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "sails": "~0.12.13",
     "sails-disk": "~0.10.9",
     "sails-mysql": "^0.11.5",
-    "socket.io": "^1.7.4"
+    "socket.io": "^1.7.4",
+    "underscore": "^1.8.3"
   },
   "scripts": {
     "debug": "node debug app.js",
