--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bcrypt": "^1.0.2",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^3.3.7",
+    "connect-redis": "3.0.2",
     "ejs": "2.3.4",
     "grunt": "1.0.1",
     "grunt-contrib-clean": "1.0.0",
@@ -23,6 +24,7 @@
     "grunt-sync": "0.5.2",
     "include-all": "^1.0.0",
     "libsodium": "^0.5.1",
+    "materialize-css": "^0.98.2",
     "rc": "1.0.1",
     "react": "^15.5.3",
     "react-bootstrap": "^0.30.8",
