--- a/package.json
+++ b/package.json
@@ -24,7 +24,12 @@
     "grunt-sync": "0.5.2",
     "include-all": "^1.0.0",
     "libsodium": "^0.5.1",
+    "machinepack-gravatar": "^1.2.0",
+    "machinepack-passwords": "^2.3.0",
     "materialize-css": "^0.98.2",
+    "multer": "^1.3.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "rc": "1.0.1",
     "react": "^15.5.3",
     "react-bootstrap": "^0.30.8",
